--- a/views/admin/mixins/table-tree.pug
+++ b/views/admin/mixins/table-tree.pug
@@ -26,6 +26,7 @@ mixin table-tree(items, level = 1)
           name="position"
         )
       td
+        if(role.permissions.includes("rooms-category_edit"))
           if(item.status == "active")
             a(
               href="javascript:;"
@@ -47,15 +48,17 @@ mixin table-tree(items, level = 1)
           href=`${prefixAdmin}/rooms-category/detail/${item.id}`
           class="btn btn-secondary btn-sm"
         ) Chi tiết
-        a(
-          href=`${prefixAdmin}/rooms-category/edit/${item.id}`
-          class="btn btn-warning btn-sm ml-1  "
-        ) Sửa
-        button(
-          class="btn btn-danger btn-sm ml-1"
-          button-delete
-          data-id=item.id
-        ) Xóa
+        if(role.permissions.includes("rooms-category_edit"))
+          a(
+            href=`${prefixAdmin}/rooms-category/edit/${item.id}`
+            class="btn btn-warning btn-sm ml-1  "
+          ) Sửa
+        if(role.permissions.includes("rooms-category_delete"))
+          button(
+            class="btn btn-danger btn-sm ml-1"
+            button-delete
+            data-id=item.id
+          ) Xóa
 
       if item.children && item.children.length > 0
         +table-tree(item.children, level + 1)
