--- a/views/admin/pages/rooms-category/index.pug
+++ b/views/admin/pages/rooms-category/index.pug
@@ -4,50 +4,52 @@ include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 include ../../mixins/table-tree.pug
 block main
-  h1 Danh mục sản phẩm
-  .card.mb-3
-    .card-header Bộ lọc và Tìm kiếm
-    .card-body
-      .row 
-        .col-6
-          +filter-status    
-        .col-6     
-          +search(keyword)
-
-  .card.mb-3
-    .card-header Danh sách
+  if(role.permissions.includes("rooms-category_view"))
+    h1 Danh mục phòng
+    .card.mb-3
+      .card-header Bộ lọc và Tìm kiếm
       .card-body
-        .row
-          .col-8
-          .col-4
-            a(
-              href=`${prefixAdmin}/rooms-category/create`
-              class="btn btn-outline-success mb-3"
-            ) + Thêm mới
+        .row 
+          .col-6
+            +filter-status    
+          .col-6     
+            +search(keyword)
 
-        table(
-          class="table table-hover table-sm"
-          checkbox-multi
-        )
-          thead
-            tr
-              th
-                input(type="checkbox" name="checkall")
-              th STT
-              th Hình ảnh
-              th Tiêu đề
-              th Vị trí
-              th Trạng thái
-              th Hành động
+    .card.mb-3
+      .card-header Danh sách
+        .card-body
+          .row
+            .col-8
+            if(role.permissions.includes("rooms-category_create"))
+              .col-4
+                a(
+                  href=`${prefixAdmin}/rooms-category/create`
+                  class="btn btn-outline-success mb-3"
+                ) + Thêm mới
 
-          tbody
-            +table-tree(records)
-  
-  +pagination(pagination)
+          table(
+            class="table table-hover table-sm"
+            checkbox-multi
+          )
+            thead
+              tr
+                th
+                  input(type="checkbox" name="checkall")
+                th STT
+                th Hình ảnh
+                th Tiêu đề
+                th Vị trí
+                th Trạng thái
+                th Hành động
 
-  form(
-    action=""
-    method="POST"
-    id="form-delete-item"
-    data-path=`${prefixAdmin}/rooms-category/delete`
-  )
+            tbody
+              +table-tree(records)
+    
+    +pagination(pagination)
+
+    form(
+      action=""
+      method="POST"
+      id="form-delete-item"
+      data-path=`${prefixAdmin}/rooms-category/delete`
+    )
