--- a/views/admin/pages/rooms-facility/edit.pug
+++ b/views/admin/pages/rooms-facility/edit.pug
@@ -3,92 +3,94 @@ include ../../mixins/alert.pug
 
 
 block main 
-  +alert-error(5000)
-  +alert-success(5000)
+  if(role.permissions.includes("rooms-facility_edit"))
 
-  h1(class="mb-4") Chỉnh sửa cơ sở vật chất
+    +alert-error(5000)
+    +alert-success(5000)
 
-  form(
-    action=`${prefixAdmin}/rooms-facility/edit/${facility.id}?_method=PATCH`
-    id="form-edit-facility"
-    method="POST"
-    enctype="multipart/form-data"
-  )
-    div(class="form-group")
-      label(for="title") Tên
-      input(
-        type="text"
-        class="form-control"
-        id="title"
-        name="title"
-        required
-        value=facility.title
-      )
-    div(class="form-group")
-      label(for="desc") Mô tả
-      textarea(
-          class="form-control textarea-mce"
-          id="desc"
-          name="description"
-          rows="5"
-          value=facility.description
-      ) #{facility.description}
-    
-    div(
-      class="form-group"
-      upload-image
+    h1(class="mb-4") Chỉnh sửa cơ sở vật chất
+
+    form(
+      action=`${prefixAdmin}/rooms-facility/edit/${facility.id}?_method=PATCH`
+      id="form-edit-facility"
+      method="POST"
+      enctype="multipart/form-data"
     )
-      label(for="thumbnail") Ảnh
-      input(
-        type="file"
-        class="form-control-file"
-        id="thumbnail"
-        name="thumbnail"
-        accept="image/*"
-        upload-image-input
+      div(class="form-group")
+        label(for="title") Tên
+        input(
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+          required
+          value=facility.title
+        )
+      div(class="form-group")
+        label(for="desc") Mô tả
+        textarea(
+            class="form-control textarea-mce"
+            id="desc"
+            name="description"
+            rows="5"
+            value=facility.description
+        ) #{facility.description}
+      
+      div(
+        class="form-group"
+        upload-image
       )
-      img(
-        src=facility.icon
-        upload-image-preview
-        class="image-preview"
-      )
-    div(class="form-group")
-      label(for="position") Vị trí
-      input(
-        type="number"
-        class="form-control"
-        id="position"
-        name="position"
-        placeholder="Tự động tăng"
-        min="1"
-        value=facility.position
-      )
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusActive"
-        name="status"
-        value="active"
-        checked=(facility.status == "active" ? true : false)
-      )
-      label(for="statusActive" class="form-check-label") Hoạt động
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusInActive"
-        name="status"
-        value="inactive"
-        checked=(facility.status == "inactive" ? true : false)
-      )
-      label(for="statusInActive" class="form-check-label") Dừng hoạt động
-    div(class="form-group")
-      button(
-        type="submit"
-        class="btn btn-primary"
-      ) Cập nhật   
+        label(for="thumbnail") Ảnh
+        input(
+          type="file"
+          class="form-control-file"
+          id="thumbnail"
+          name="thumbnail"
+          accept="image/*"
+          upload-image-input
+        )
+        img(
+          src=facility.icon
+          upload-image-preview
+          class="image-preview"
+        )
+      div(class="form-group")
+        label(for="position") Vị trí
+        input(
+          type="number"
+          class="form-control"
+          id="position"
+          name="position"
+          placeholder="Tự động tăng"
+          min="1"
+          value=facility.position
+        )
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusActive"
+          name="status"
+          value="active"
+          checked=(facility.status == "active" ? true : false)
+        )
+        label(for="statusActive" class="form-check-label") Hoạt động
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusInActive"
+          name="status"
+          value="inactive"
+          checked=(facility.status == "inactive" ? true : false)
+        )
+        label(for="statusInActive" class="form-check-label") Dừng hoạt động
+      div(class="form-group")
+        button(
+          type="submit"
+          class="btn btn-primary"
+        ) Cập nhật   
+      
     
-  
 
-  script(src="/admin/js/room.js")
+    script(src="/admin/js/room.js")
