--- a/views/admin/pages/rooms-facility/index.pug
+++ b/views/admin/pages/rooms-facility/index.pug
@@ -4,104 +4,110 @@ include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 
 block main
-  .card.mb-3
-    .card-header Danh sách cơ sở vật chất
+  if(role.permissions.includes("rooms-facility_view"))
+
     .card.mb-3
-      .card-header Bộ lọc và Tìm kiếm
+      .card-header Danh sách cơ sở vật chất
+      .card.mb-3
+        .card-header Bộ lọc và Tìm kiếm
+        .card-body
+          .row 
+            .col-6
+              +filter-status    
+            .col-6     
+              +search(keyword)
       .card-body
         .row 
-          .col-6
-            +filter-status    
-          .col-6     
-            +search(keyword)
-    .card-body
-      .row 
-        .col-8
-          //- +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
-        .col-4 
-          a(
-            href=`${prefixAdmin}/rooms-facility/create`
-            class="btn btn-outline-success mb-3"
-          ) + Thêm mới
+          .col-8
+            //- +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
+          if(role.permissions.includes("rooms-facility_create"))
+            .col-4 
+              a(
+                href=`${prefixAdmin}/rooms-facility/create`
+                class="btn btn-outline-success mb-3"
+              ) + Thêm mới
 
-      table(
-        class="table table-hover table-sm "
-        checkbox-multi 
-      )
-        thead 
-          tr 
-            th 
-              input(type="checkbox" name="checkall")
-            th STT
-            th Icon
-            th Tiêu đề
-            th Vị trí
-            th Trạng thái
-            th Hành động
-
-        tbody 
-          each item, index in records
+        table(
+          class="table table-hover table-sm "
+          checkbox-multi 
+        )
+          thead 
             tr 
-              td 
-                input(
-                  type="checkbox"
-                  name="id"
-                  value=item.id  
-                )
-              td #{index + 1}
-              td 
-                img(
-                  src=item.icon
-                  alt=item.title
-                  width="100px"
-                  height="auto"
-                )
-              td #{item.title}
-              td 
-                input(
-                  type="number"
-                  value=item.position
-                  style="width: 60px"
-                  min="1"
-                  name="position" 
-                )
-              td  
-                if(item.status == "active")
-                  a(
-                    href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge badge-success"
-                  ) Hoạt động
-                else
-                  a(
-                    href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge badge-danger"
-                  ) Dừng hoạt động        
-              td 
-                a(
-                  href=`${prefixAdmin}/rooms-facility/detail/${item.id}`
-                  class="btn btn-secondary btn-sm"
-                ) Chi tiết     
-                a(
-                  href=`${prefixAdmin}/rooms-facility/edit/${item.id}`
-                  class="btn btn-warning btn-sm ml-1"
-                ) Sửa
-                button(
-                  class="btn btn-danger btn-sm ml-1"
-                  button-delete
-                  data-id=item.id
-                ) Xóa
-  form(
-    action=""
-    method="POST"
-    id="form-delete-item"
-    data-path=`${prefixAdmin}/rooms-facility/delete`
-  )  
-  +pagination(pagination)
+              th 
+                input(type="checkbox" name="checkall")
+              th STT
+              th Icon
+              th Tiêu đề
+              th Vị trí
+              th Trạng thái
+              th Hành động
 
-  script(src="/admin/js/script.js")
+          tbody 
+            each item, index in records
+              tr 
+                td 
+                  input(
+                    type="checkbox"
+                    name="id"
+                    value=item.id  
+                  )
+                td #{index + 1}
+                td 
+                  img(
+                    src=item.icon
+                    alt=item.title
+                    width="100px"
+                    height="auto"
+                  )
+                td #{item.title}
+                td 
+                  input(
+                    type="number"
+                    value=item.position
+                    style="width: 60px"
+                    min="1"
+                    name="position" 
+                  )
+                td  
+                  if(role.permissions.includes("rooms-facility_edit"))
+                    if(item.status == "active")
+                      a(
+                        href="javascript:;"
+                        data-status=item.status
+                        data-id=item.id
+                        button-change-status 
+                        class="badge badge-success"
+                      ) Hoạt động
+                    else
+                      a(
+                        href="javascript:;"
+                        data-status=item.status
+                        data-id=item.id
+                        button-change-status 
+                        class="badge badge-danger"
+                      ) Dừng hoạt động        
+                td 
+                  a(
+                    href=`${prefixAdmin}/rooms-facility/detail/${item.id}`
+                    class="btn btn-secondary btn-sm"
+                  ) Chi tiết    
+                  if(role.permissions.includes("rooms-facility_edit")) 
+                    a(
+                      href=`${prefixAdmin}/rooms-facility/edit/${item.id}`
+                      class="btn btn-warning btn-sm ml-1"
+                    ) Sửa
+                  if(role.permissions.includes("rooms-facility_delete"))
+                    button(
+                      class="btn btn-danger btn-sm ml-1"
+                      button-delete
+                      data-id=item.id
+                    ) Xóa
+    form(
+      action=""
+      method="POST"
+      id="form-delete-item"
+      data-path=`${prefixAdmin}/rooms-facility/delete`
+    )  
+    +pagination(pagination)
+
+    script(src="/admin/js/script.js")
