--- a/views/admin/pages/rooms/create.pug
+++ b/views/admin/pages/rooms/create.pug
@@ -3,164 +3,164 @@ include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 
 block main 
-  +alert-error(5000)
-  +alert-success(5000)
+  if(role.permissions.includes("products_create"))
+    +alert-error(5000)
 
-  h1(class="mb-4") Thêm mới phòng
+    h1(class="mb-4") Thêm mới phòng
 
-  form(
-    action=`${prefixAdmin}/rooms/create`
-    id="form-create-room"
-    method="POST"
-    enctype="multipart/form-data"
-  )
-    div(class="form-group")
-      label(for="title") Tên 
-      input(
-        type="text"
-        class="form-control"
-        id="name"
-        name="name"
-        required
-      )
-    div(class="form-group")
-      label(for="room_category_id") Danh mục
-      select(
-        name="room_category_id"
-        id="room_category_id"
-        class="form-control"
-      )
-        option(value="") -- Chọn danh mục --
-        if(category)
-          +select-tree(category)
-    div(class="form-group")
-      label(for="desc") Mô tả
-      textarea(
-        class="form-control textarea-mce"
-        id="desc"
-        name="description"
-        rows="5"
-        )
-    div(class="form-group")
-      label(for="price") Giá
-      input(
-        type="number"
-        class="form-control"
-        id="price"
-        name="price"
-        value="0"
-        min="0"
-      )
-    div(class="form-group")
-      label(for="price") Cơ sở vật chất:
-      .row 
-        each facility in facilities 
-          .col-3
-            label
-              input(
-                value=facility.id 
-                name="room_facilities_id" 
-                type="checkbox"
-                )
-              |  #{facility.title}
-            
-    div(class="form-group")
-      .row
-        .col-6 
-          label(for="price") Người lớn:
-          input(
-            type="number"
-            class="form-control"
-            id="adult"
-            name="adult"
-            value="0"
-            min="0"
-          )
-        .col-6 
-          label(for="price") Trẻ em:
-          input(
-            type="number"
-            class="form-control"
-            id="children"
-            name="children"
-            value="0"
-            min="0" 
-          )
-    div(class="form-group")
-      label(for="discount") % Giảm giá
-      input(
-        type="number"
-        class="form-control"
-        id="discount"
-        name="discountPercentage"
-        value="0"
-        min="0"
-      )
-    div(class="form-group")
-      label(for="stock") Số lượng
-      input(
-        type="number"
-        class="form-control"
-        id="stock"
-        name="stock"
-        value="0"
-        min="0"
-      )
-
-    div(
-      class="form-group"
-      upload-image
+    form(
+      action=`${prefixAdmin}/rooms/create`
+      id="form-create-room"
+      method="POST"
+      enctype="multipart/form-data"
     )
-      label(for="thumbnail") Ảnh
-      input(
-        type="file" 
-        class="form-control-file"
-        id="images"
-        name="images"
-        accept="image/*"
-        upload-image-input
-        multiple
-      )
-      div(upload-image-preview-container) 
-      //- img(
-      //-   src=""
-      //-   upload-image-preview
-      //-   class="image-preview"
-      //- )
+      div(class="form-group")
+        label(for="title") Tên 
+        input(
+          type="text"
+          class="form-control"
+          id="name"
+          name="name"
+          required
+        )
+      div(class="form-group")
+        label(for="room_category_id") Danh mục
+        select(
+          name="room_category_id"
+          id="room_category_id"
+          class="form-control"
+        )
+          option(value="") -- Chọn danh mục --
+          if(category)
+            +select-tree(category)
+      div(class="form-group")
+        label(for="desc") Mô tả
+        textarea(
+          class="form-control textarea-mce"
+          id="desc"
+          name="description"
+          rows="5"
+          )
+      div(class="form-group")
+        label(for="price") Giá
+        input(
+          type="number"
+          class="form-control"
+          id="price"
+          name="price"
+          value="0"
+          min="0"
+        )
+      div(class="form-group")
+        label(for="price") Cơ sở vật chất:
+        .row 
+          each facility in facilities 
+            .col-3
+              label
+                input(
+                  value=facility.id 
+                  name="room_facilities_id" 
+                  type="checkbox"
+                  )
+                |  #{facility.title}
+              
+      div(class="form-group")
+        .row
+          .col-6 
+            label(for="price") Người lớn:
+            input(
+              type="number"
+              class="form-control"
+              id="adult"
+              name="adult"
+              value="0"
+              min="0"
+            )
+          .col-6 
+            label(for="price") Trẻ em:
+            input(
+              type="number"
+              class="form-control"
+              id="children"
+              name="children"
+              value="0"
+              min="0" 
+            )
+      div(class="form-group")
+        label(for="discount") % Giảm giá
+        input(
+          type="number"
+          class="form-control"
+          id="discount"
+          name="discountPercentage"
+          value="0"
+          min="0"
+        )
+      div(class="form-group")
+        label(for="stock") Số lượng
+        input(
+          type="number"
+          class="form-control"
+          id="stock"
+          name="stock"
+          value="0"
+          min="0"
+        )
 
-    div(class="form-group")
-      label(for="position") Vị trí
-      input(
-        type="number"
-        class="form-control"
-        id="position"
-        name="position"
-        placeholder="Tự động tăng"
-        min="1"
+      div(
+        class="form-group"
+        upload-image
       )
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusActive"
-        name="status"
-        value="active"
-        checked
-      )
-      label(for="statusActive" class="form-check-label") Hoạt động
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusInActive"
-        name="status"
-        value="inactive"
-      )
-      label(for="statusInActive" class="form-check-label") Dừng hoạt động
-    div(class="form-group")
-      button(
-        type="submit"
-        class="btn btn-primary"
-      ) Tạo mới
+        label(for="thumbnail") Ảnh
+        input(
+          type="file" 
+          class="form-control-file"
+          id="images"
+          name="images"
+          accept="image/*"
+          upload-image-input
+          multiple
+        )
+        div(upload-image-preview-container) 
+        //- img(
+        //-   src=""
+        //-   upload-image-preview
+        //-   class="image-preview"
+        //- )
 
-    script(src="/admin/js/room.js")
+      div(class="form-group")
+        label(for="position") Vị trí
+        input(
+          type="number"
+          class="form-control"
+          id="position"
+          name="position"
+          placeholder="Tự động tăng"
+          min="1"
+        )
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusActive"
+          name="status"
+          value="active"
+          checked
+        )
+        label(for="statusActive" class="form-check-label") Hoạt động
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusInActive"
+          name="status"
+          value="inactive"
+        )
+        label(for="statusInActive" class="form-check-label") Dừng hoạt động
+      div(class="form-group")
+        button(
+          type="submit"
+          class="btn btn-primary"
+        ) Tạo mới
+
+      script(src="/admin/js/room.js")
