--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -7,115 +7,120 @@ include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 
 block main
-  +alert-success(5000)
-  h1 Trang danh sách phòng 
-  .card.mb-3
-    .card-header Bộ lọc và Tìm kiếm
-    .card-body
-      .row 
-        .col-6
-          +filter-status    
-        .col-6     
-          +search(keyword)
-  .card.mb-3
-    .card-header Sắp xếp
-    .card-body
-      .row
-        .col-4
-          +sort()
-  .card.mb-3
-    .card-header Danh sách phòng
-    .card-body
-      .row 
-        .col-8
-          +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
-        .col-4 
-          a(
-            href=`${prefixAdmin}/rooms/create`
-            class="btn btn-outline-success"
-          ) + Thêm mới
+  if(role.permissions.includes("rooms_view"))
+    +alert-success(5000)
+    h1 Trang danh sách phòng 
+    .card.mb-3
+      .card-header Bộ lọc và Tìm kiếm
+      .card-body
+        .row 
+          .col-6
+            +filter-status    
+          .col-6     
+            +search(keyword)
+    .card.mb-3
+      .card-header Sắp xếp
+      .card-body
+        .row
+          .col-4
+            +sort()
+    .card.mb-3
+      .card-header Danh sách phòng
+      .card-body
+        .row 
+          .col-8
+            +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
+          if(role.permissions.includes("rooms_create"))
+            .col-4 
+              a(
+                href=`${prefixAdmin}/rooms/create`
+                class="btn btn-outline-success"
+              ) + Thêm mới
 
-      table(
-        class="table table-hover table-sm "
-        checkbox-multi 
-      )
-        thead 
-          tr 
-            th 
-              input(type="checkbox" name="checkall")
-            th STT
-            th Hình ảnh
-            th Tiêu đề
-            th Giá
-            th Loại khách
-            th Vị trí
-            th Trạng thái
-            //- th Người tạo
-            //- th Người cập nhật
-            th Hành động
-
-        tbody 
-          each item, index in rooms
+        table(
+          class="table table-hover table-sm "
+          checkbox-multi 
+        )
+          thead 
             tr 
-              td 
-                input(
-                  type="checkbox"
-                  name="id"
-                  value=item.id  
-                )
-              td #{pagination.limitItems*(pagination.currentPage - 1) + (index+1)}
-              td 
-                img(
-                    src=item.thumbnail
-                    alt=item.title
-                    width="100px"
-                    height="auto"
-                )
-              td #{item.name}
-              td #{item.price}
-              
-              td
-                span(class="badge rounded-pill bg-light text-dark") Adult: #{item.adult}
-                br
-                span(class="badge rounded-pill bg-light text-dark") Children: #{item.children}
-              td 
-                input(
-                  type="number"
-                  value=item.position
-                  style="width: 60px"
-                  min="1"
-                  name="position" 
-                )
-              td  
-                if(item.status == "active")
-                  a(
-                    href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge badge-success"
-                  ) Hoạt động
-                else
-                  a(
-                    href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge badge-danger"
-                  ) Dừng hoạt động        
-              td 
-                a(
-                  href=`${prefixAdmin}/rooms/detail/${item.id}`
-                  class="btn btn-secondary btn-sm"
-                ) Chi tiết     
-                a(
-                  href=`${prefixAdmin}/rooms/edit/${item.id}`
-                  class="btn btn-warning btn-sm ml-1"
-                ) Sửa
-                button(
-                  class="btn btn-danger btn-sm ml-1"
-                  button-delete
-                  data-id=item.id
-                ) Xóa
+              th 
+                input(type="checkbox" name="checkall")
+              th STT
+              th Hình ảnh
+              th Tiêu đề
+              th Giá
+              th Loại khách
+              th Vị trí
+              th Trạng thái
+              //- th Người tạo
+              //- th Người cập nhật
+              th Hành động
 
-  +pagination(pagination)
+          tbody 
+            each item, index in rooms
+              tr 
+                td 
+                  input(
+                    type="checkbox"
+                    name="id"
+                    value=item.id  
+                  )
+                td #{pagination.limitItems*(pagination.currentPage - 1) + (index+1)}
+                td 
+                  img(
+                      src=item.thumbnail
+                      alt=item.title
+                      width="100px"
+                      height="auto"
+                  )
+                td #{item.name}
+                td #{item.price}
+                
+                td
+                  span(class="badge rounded-pill bg-light text-dark") Adult: #{item.adult}
+                  br
+                  span(class="badge rounded-pill bg-light text-dark") Children: #{item.children}
+                td 
+                  input(
+                    type="number"
+                    value=item.position
+                    style="width: 60px"
+                    min="1"
+                    name="position" 
+                  )
+                td  
+                  if(role.permissions.includes("rooms_edit"))
+                    if(item.status == "active")
+                      a(
+                        href="javascript:;"
+                        data-status=item.status
+                        data-id=item.id
+                        button-change-status 
+                        class="badge badge-success"
+                      ) Hoạt động
+                    else
+                      a(
+                        href="javascript:;"
+                        data-status=item.status
+                        data-id=item.id
+                        button-change-status 
+                        class="badge badge-danger"
+                      ) Dừng hoạt động        
+                td 
+                  a(
+                    href=`${prefixAdmin}/rooms/detail/${item.id}`
+                    class="btn btn-secondary btn-sm"
+                  ) Chi tiết
+                  if(role.permissions.includes("rooms_edit"))
+                    a(
+                      href=`${prefixAdmin}/rooms/edit/${item.id}`
+                      class="btn btn-warning btn-sm ml-1"
+                    ) Sửa
+                  if(role.permissions.includes("rooms_delete"))
+                    button(
+                      class="btn btn-danger btn-sm ml-1"
+                      button-delete
+                      data-id=item.id
+                    ) Xóa
+
+    +pagination(pagination)
