--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -1,17 +1,23 @@
 .sider 
   .inner-menu 
     ul 
-      li 
-        a(href=`${prefixAdmin}/dashboard`) Tổng quan 
-      li 
-        a(href=`${prefixAdmin}/rooms`) Danh sách phòng
-      li 
-        a(href=`${prefixAdmin}/rooms-category`) Danh mục phòng
-      li 
-        a(href=`${prefixAdmin}/rooms-facility`) Cơ sở vật chất
       li
-        a(href=`${prefixAdmin}/roles`) Nhóm quyền
-      li
-        a(href=`${prefixAdmin}/roles/permissions`) Phân quyền
-      li
-        a(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
+        a(href=`${prefixAdmin}/dashboard`) Tổng quan
+      if(role.permissions.includes("rooms-category_view"))
+        li
+          a(href=`${prefixAdmin}/rooms-category`) Danh mục phòng
+      if(role.permissions.includes("rooms_view"))
+        li
+          a(href=`${prefixAdmin}/rooms`) Danh sách phòng
+      if(role.permissions.includes("rooms-facility_view"))
+        li
+          a(href=`${prefixAdmin}/rooms-facility`) Cơ sở vật chất
+      if(role.permissions.includes("roles_view"))
+        li
+          a(href=`${prefixAdmin}/roles`) Nhóm quyền
+      if(role.permissions.includes("roles_permissions"))
+        li
+          a(href=`${prefixAdmin}/roles/permissions`) Phân quyền
+      if(role.permissions.includes("accounts_view"))
+        li
+          a(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
