--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -5,6 +5,7 @@ include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
 include ../../mixins/alert.pug
 include ../../mixins/sort.pug
+include ../../mixins/moment.pug
 
 block main
   if(role.permissions.includes("rooms_view"))
@@ -52,7 +53,7 @@ block main
               th Loại khách
               th Vị trí
               th Trạng thái
-              //- th Người tạo
+              th Người tạo
               //- th Người cập nhật
               th Hành động
 
@@ -105,7 +106,11 @@ block main
                         data-id=item.id
                         button-change-status 
                         class="badge badge-danger"
-                      ) Dừng hoạt động        
+                      ) Dừng hoạt động  
+                td
+                  p #{item.accountFullName}
+                  p
+                    +formatDate(item.createdBy.createdAt)      
                 td 
                   a(
                     href=`${prefixAdmin}/rooms/detail/${item.id}`
