8. Log xóa sản phẩm

--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -127,5 +127,12 @@ block main
                       button-delete
                       data-id=item.id
                     ) Xóa
-
+  form(
+    action=""
+    method="POST"
+    id="form-delete-item"
+    data-path=`${prefixAdmin}/accounts/delete`
+  )
     +pagination(pagination)
+  
+    script(src="/admin/js/room.js")
