--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -8,6 +8,7 @@ include ../../mixins/sort.pug
 include ../../mixins/moment.pug
 
 block main
+
   if(role.permissions.includes("rooms_view"))
     +alert-success(5000)
     h1 Trang danh sách phòng 
@@ -54,7 +55,7 @@ block main
               th Vị trí
               th Trạng thái
               th Người tạo
-              //- th Người cập nhật
+              th Người cập nhật
               th Hành động
 
           tbody 
@@ -69,10 +70,10 @@ block main
                 td #{pagination.limitItems*(pagination.currentPage - 1) + (index+1)}
                 td 
                   img(
-                      src=item.thumbnail
-                      alt=item.title
-                      width="100px"
-                      height="auto"
+                    src=item.thumbnail
+                    alt=item.title
+                    width="100px"
+                    height="auto"
                   )
                 td #{item.name}
                 td #{item.price}
@@ -110,7 +111,13 @@ block main
                 td
                   p #{item.accountFullName}
                   p
-                    +formatDate(item.createdBy.createdAt)      
+                    +formatDate(item.createdBy.createdAt)  
+                td 
+                  -const updatedBy = item.updatedBy.slice(-1)[0];
+                  if(updatedBy) 
+                    p #{updatedBy.accountFullName}
+                    p 
+                      +formatDateTime(updatedBy.updatedAt)
                 td 
                   a(
                     href=`${prefixAdmin}/rooms/detail/${item.id}`
