1. Giao diện trang chủ bên client (P1)

--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -52,153 +52,56 @@ block main
   h2.mt-5.pt-4.mb-4.text-center.fw-bold.h-font Phòng
   .container
     .row
-      .col-lg-4.col-md-6.my-3(style="")
-        .card.border-0.shadow(style="max-width:350px;margin:auto;min-height:651px")
-          .w-100.h-100(style="max-height:196px")
-            .swiper.swiper-container
-              .swiper-wrapper
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/1.jpg"
-                    )
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/2.png"
-                    )
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/3.webp"
-                    )
-          .card-body
-            h5 Phòng thường
-            h6.mb-4 $199/ngày
-            .features.mb-4
-              h6.mb-1 Cấu hình
-              span.badge.bg-light.text-dark.text-wrap 2 phòng
-              span.badge.bg-light.text-dark.text-wrap 1 phòng tắm
-              span.badge.bg-light.text-dark.text-wrap 1 ban công
-              span.badge.bg-light.text-dark.text-wrap 1 Sofa
-            .facilities.mb-4
-              h6.mb-1 Tiện ích
-              span.badge.bg-light.text-dark.text-wrap Wifi
-              span.badge.bg-light.text-dark.text-wrap Tivi
-              span.badge.bg-light.text-dark.text-wrap Máy lọc không khí
-              span.badge.bg-light.text-dark.text-wrap Máy sưởi
-            .guests.mb-4
-              h6.mb-1 Số lượng
-              span.badge.bg-light.text-dark.text-wrap 2 người lớn
-              span.badge.bg-light.text-dark.text-wrap 1 trẻ con
-            .rating.mb-4
-              h6.mb-1 Đánh giá
-              span.badge.rounded-pill.bg-light
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-            .d-flex.justify-content-evenly.mb-2
-              a.btn.btn-md.text-white.custom-bg.shadow-none(href="#") Đặt ngay
-      .col-lg-4.col-md-6.my-3
-        .card.border-0.shadow(style="max-width:350px;margin:auto;min-height:651px")
-          .w-100.h-100(style="max-height:196px")
-            .swiper.swiper-container
-              .swiper-wrapper
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/1.jpg"
-                    )
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/2.png"
-                    )
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/3.webp"
-                    )
-          .card-body
-            h5 Phòng vip
-            h6.mb-4 $399/ngày
-            .features.mb-4
-              h6.mb-1 Cấu hình
-              span.badge.bg-light.text-dark.text-wrap 3 phòng
-              span.badge.text-bg-light.text-dark.text-wrap 1 phòng tắm
-              span.badge.text-bg-light.text-dark.text-wrap 1 ban công
-              span.badge.text-bg-light.text-dark.text-wrap 2 Sofa
-            .facilities.mb-4
-              h6.mb-1 Tiện ích
-              span.badge.text-bg-light.text-dark.text-wrap Wifi
-              span.badge.text-bg-light.text-dark.text-wrap Tivi
-              span.badge.text-bg-light.text-dark.text-wrap Máy lọc không khí
-              span.badge.text-bg-light.text-dark.text-wrap Máy sưởi
-            .guests.mb-4
-              h6.mb-1 Số lượng
-              span.badge.text-bg-light.text-dark.text-wrap 3 người lớn
-              span.badge.text-bg-light.text-dark.text-wrap 2 trẻ con
-            .rating.mb-4
-              h6.mb-1 Đánh giá
-              span.badge.rounded-pill.bg-light
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-            .d-flex.justify-content-evenly.mb-2
-              a.btn.btn-md.text-white.custom-bg.shadow-none(href="#") Đặt ngay
-      .col-lg-4.col-md-6.my-3(style="min-height:651px")
-        .card.border-0.shadow(style="max-width:350px;margin:auto;min-height:651px")
-          .w-100.h-100(style="max-height:196px")
-            .swiper.swiper-container
-              .swiper-wrapper
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/1.jpg"
-                    )
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/2.png"
-                    )
-                .swiper-slide
-                  img.w-100.d-block(
-                    style="max-height:196px" 
-                    src="images/rooms/3.webp"
-                    )
-          .card-body
-            h5 Phòng tổng thống
-            h6.mb-4 $599/ngày
-            .features.mb-4
-              h6.mb-1 Cấu hình
-              span.badge.text-bg-light.text-dark.text-wrap 3 phòng
-              span.badge.text-bg-light.text-dark.text-wrap 2 phòng tắm
-              span.badge.text-bg-light.text-dark.text-wrap 2 ban công
-              span.badge.text-bg-light.text-dark.text-wrap 3 Sofa
-            .facilities.mb-4
-              h6.mb-1 Tiện ích
-              span.badge.text-bg-light.text-dark.text-wrap Wifi
-              span.badge.text-bg-light.text-dark.text-wrap Tivi
-              span.badge.bg-light.text-dark.text-wrap Máy lọc không khí
-              span.badge.bg-light.text-dark.text-wrap Máy sưởi
-            .guests.mb-4
-              h6.mb-1 Số lượng
-              span.badge.bg-light.text-dark.text-wrap 3 người lớn
-              span.badge.bg-light.text-dark.text-wrap 3 trẻ con
-            .rating.mb-4
-              h6.mb-1 Đánh giá
-              span.badge.rounded-pill.bg-light
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-                i.bi.bi-star-fill.text-warning
-            .d-flex.justify-content-evenly.mb-2
-              a.btn.btn-md.text-white.custom-bg.shadow-none(href="#") Đặt ngay
+      each item, index in rooms
+        .col-lg-4.col-md-6.my-3(style="")
+          .card.border-0.shadow(style="max-width:350px;margin:auto;min-height:651px")
+            .w-100.h-100(style="max-height:196px")
+              .swiper.swiper-container
+                .swiper-wrapper
+                  .swiper-slide
+                    img.w-100.d-block(
+                      style="max-height:196px" 
+                      src="images/rooms/1.jpg"
+                      )
+                  .swiper-slide
+                    img.w-100.d-block(
+                      style="max-height:196px" 
+                      src="images/rooms/2.png"
+                      )
+                  .swiper-slide
+                    img.w-100.d-block(
+                      style="max-height:196px" 
+                      src="images/rooms/3.webp"
+                      )
+            .card-body
+              h5 #{item.name}
+              h6.mb-4 #{item.price}/ngày
+              .features.mb-4
+                h6.mb-1 Cấu hình
+                  
+                span.badge.bg-light.text-dark.text-wrap 2 phòng
+                span.badge.bg-light.text-dark.text-wrap 1 phòng tắm
+                span.badge.bg-light.text-dark.text-wrap 1 ban công
+                span.badge.bg-light.text-dark.text-wrap 1 Sofa
+              .facilities.mb-4
+                h6.mb-1 Tiện ích
+                each facility in item.facilities
+                  span.badge.bg-light.text-dark.text-wrap.mx-1 #{facility.title}
+                  
+              .guests.mb-4
+                h6.mb-1 Số lượng
+                span.badge.bg-light.text-dark.text-wrap 2 người lớn
+                span.badge.bg-light.text-dark.text-wrap 1 trẻ con
+              .rating.mb-4
+                h6.mb-1 Đánh giá
+                span.badge.rounded-pill.bg-light
+                  i.bi.bi-star-fill.text-warning
+                  i.bi.bi-star-fill.text-warning
+                  i.bi.bi-star-fill.text-warning
+                  i.bi.bi-star-fill.text-warning
+                  i.bi.bi-star-fill.text-warning
+              .d-flex.justify-content-evenly.mb-2
+                a.btn.btn-md.text-white.custom-bg.shadow-none(href="#") Đặt ngay
       .col-lg-12.text-center.mt-5
         a.btn.btn-sm.btn-outline-dark.rounded-0.fw-bold.shadow-none(href="<?=_WEB_HOST?>/khach/rooms") Xem thêm phòng 
 
