--- a/views/client/pages/rooms/index.pug
+++ b/views/client/pages/rooms/index.pug
@@ -50,31 +50,31 @@ block main
                     label.form-label trẻ em
                     input.form-control.shadow-none(type="number")
       .col-lg-9.col-md-12.px-4.mb-lg-0.mb-md-0.mb-3
-        .card.mb-4.border-0.shadow
-          .row.g-0.p-3.align-items-center
-            .col-md-5
-              img.img-fluid.rounded(src="images/rooms/1.jpg")
-            .col-md-5.px-lg-3.px-md-3.px-0
-              h5.mb-1 Phòng thường
-              .features.mb-3
-                h6.mb-3 Cấu hình
-                span.badge.bg-light.text-dark.text-wrap 2 phòng
-                span.badge.bg-light.text-dark.text-wrap 1 phòng tắm
-                span.badge.bg-light.text-dark.text-wrap 1 ban công
-                span.badge.bg-light.text-dark.text-wrap 1 Sofa
-              .facilities.mb-3
-                h6.mb-1 Tính năng
-                span.badge.bg-light.text-dark.text-wrap Wifi
-                span.badge.bg-light.text-dark.text-wrap Tivi
-                span.badge.bg-light.text-dark.text-wrap Máy lọc không khí
-                span.badge.bg-light.text-dark.text-wrap Máy sưởi
-              .guests
-                h6.mb-1 Số lượng
-                span.badge.bg-light.text-dark.text-wrap 2 người lớn
-                span.badge.bg-light.text-dark.text-wrap 1 trẻ con
-            .col-md-2.text-center.mt-lg-0.mt-md-0.mt-4
-              h6.mb-4 $199/ngày
-              a.btn.btn-md.w-100.text-white.custom-bg.shadow-none.mb-2(href="") Đặt ngay
+        each room, index in rooms
+          .card.mb-4.border-0.shadow
+            .row.g-0.p-3.align-items-center
+              .col-md-5
+                img.img-fluid.rounded(src=room.thumbnail)
+              .col-md-5.px-lg-3.px-md-3.px-0
+                h5.mb-1 #{room.title}
+                .features.mb-3
+                  h6.mb-3 Đặc điểm
+                  span.badge.bg-light.text-dark.text-wrap.mx-1 2 phòng
+                  span.badge.bg-light.text-dark.text-wrap.mx-1 1 phòng tắm
+                  span.badge.bg-light.text-dark.text-wrap.mx-1 1 ban công
+                  span.badge.bg-light.text-dark.text-wrap.mx-1 1 Sofa
+                .facilities.mb-3
+                  h6.mb-1 Tính năng
+                  each facility in room.facilities
+                    span.badge.bg-light.text-dark.text-wrap.mx-1 #{facility.title}
+                   
+                .guests
+                  h6.mb-1 Số lượng
+                  span.badge.bg-light.text-dark.text-wrap.mx-1 #{room.adult} người lớn
+                  span.badge.bg-light.text-dark.text-wrap.mx-1 #{room.children} trẻ con
+              .col-md-2.text-center.mt-lg-0.mt-md-0.mt-4
+                h6.mb-4 #{room.price}/ngày
+                a.btn.btn-md.w-100.text-white.custom-bg.shadow-none.mb-2(href="") Đặt ngay
         .card.mb-4.border-0.shadow
           .row.g-0.p-3.align-items-center
             .col-md-5
