2. Làm trang chi tiết phòng bên client

--- a/views/client/pages/rooms/index.pug
+++ b/views/client/pages/rooms/index.pug
@@ -43,6 +43,7 @@ block main
                       id="f1" 
                       class="shadow-none me-1" 
                       type="checkbox"
+                      facility-id=facility.id
                     )
                     label.form-check-label(for="f1") #{facility.title}
                 h5.d-flex.align-items-center.justify-content-between.mb-3(style="font-size: 18px;") Tiện nghi
